--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,14 @@
 ***********************************/
 
 body {
-  font-family: 'Khula, 'Roboto', 'Open Sans', sans-serif;
-  background: #e8e8e8;
+    font-family: 'Roboto', 'Open Sans', sans-serif;
+    background: #e8e8e8;
 }
 
 #wrapper {
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 5%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 5%;
 }
 
 /**********************************
@@ -82,28 +82,72 @@ nav a:hover {
  ** SECTION
  ***********************************/
 .wrapper {
-	font-size: 1.6rem;
+    font-size: 1.6rem;
     background-color: green; 
     color: whitesmoke;
     text-align: center;   
 }
 
 .wrapper ul {
-	list-style: none;
+    list-style: none;
 }
-	
+    
 video, audio {
-	margin: 0 auto;
+    margin: 0 auto;
     display: block;
 }
+
+/***********************************
+ ** QUOTES
+ ***********************************/
+
+blockquote {
+    display:block;
+    background: #fff;
+    padding: 15px 20px 15px 45px;
+    margin: 0 0 20px;
+    position: relative;
+    
+    /*Font*/
+    font-family: Georgia, serif;
+    font-size: 16px;
+    line-height: 1.2;
+    color: #666;
+    text-align: justify;
+    
+    /*Borders - (Optional)*/
+    border-left: 15px solid #c76c0c;
+    border-right: 2px solid #c76c0c;
+    
+    /*Box Shadow - (Optional)*/
+    -moz-box-shadow: 2px 2px 15px #ccc;
+    -webkit-box-shadow: 2px 2px 15px #ccc;
+    box-shadow: 2px 2px 15px #ccc;
+}
+
+
 
 /***********************************
  ** FOOTER
  ***********************************/
 .main-footer {
-    background-color: lightgreen; 
+    background-color: lightgreen;
     color: whitesmoke;
     text-align: center;   
+    padding: 1rem auto 1rem;
+    margin: 0;
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+    margin: 5px 5px;
+}
+
+#back-footer {
+    margin: 5px 5px;	
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    background-color: darkgreen;
 }
 
 /* Remove underline */
@@ -113,8 +157,6 @@ footer a {
 }
 
 footer img {
-    width: 20px;
-    margin: 0 auto;
     max-width: 940px;
     clear: both; /* clear property targets float behavior, so that the parent element does not collapse */
 }
@@ -126,9 +168,9 @@ footer img {
 {
     /* Sticky footer */
     .wrap {
-    /* min-height: 100vh;  //100vh: 100% viewport height */
-    min-height: calc(100vh - 89px); /* Calculate the size of 100% minus the height of the footer (to be measured using chrome here for the example 89 */
-    }    
+        /* min-height: 100vh;  //100vh: 100% viewport height */
+        min-height: calc(100vh - 89px); /* Calculate the size of 100% minus the height of the footer (to be measured using chrome here for the example 89 */
+    }
 }
 
 /***********************************
@@ -142,17 +184,17 @@ p {
  ** IMAGES
  ***********************************/
 
-img {
+section img {
     padding: 10px;
-/* debug    border: solid 1px #d9e4ea; */
+/* debug 
+    border: solid 1px #d9e4ea; */
 }
-
 
 /***********************************
  ** FIXES FLOAT BEHAVIOR: just add this class to the element containing the float(s)
  ***********************************/
 .clearfix::after {
     content: "";
-	display: table;
-	clear: both;
+    display: table;
+    clear: both;
 }
