--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,6 @@ body {
     background: #e8e8e8;
 }
 
-#wrapper {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 5%;
-}
 
 /**********************************
 ** MOBILE
@@ -27,6 +22,7 @@ body {
 header h1 {
     text-align: center;
     font-size: 4.0rem;
+    color: whitesmoke;
 }
 
 /* Remove underline */
@@ -74,26 +70,37 @@ nav a:hover {
 }
 
 .header-nav {
-    background-color: blue;
+/*    background-color: blue; */
 }
 
 
 /***********************************
  ** SECTION
  ***********************************/
-.wrapper {
-    font-size: 1.6rem;
-    background-color: green; 
-    color: whitesmoke;
-    text-align: center;   
+.wrapper h1 {
+    font-size: 2.0rem;
 }
 
+.wrapper {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 5%;
+	  font-size: 1.1rem;
+    background: darkgreen;
+    color: black;
+}
+
+.wrapper .row {
+  display: block-inline;
+	float: right;
+}
 .wrapper ul {
     list-style: none;
 }
     
 video, audio {
-    margin: 0 auto;
+    width: 100%;
+	  margin: 0 auto;
     display: block;
 }
 
@@ -102,22 +109,23 @@ video, audio {
  ***********************************/
 
 blockquote {
-    display:block;
+	  width: 100%;
+    display: block;
     background: #fff;
     padding: 15px 20px 15px 45px;
     margin: 0 0 20px;
     position: relative;
     
     /*Font*/
-    font-family: Georgia, serif;
+    /* font-family: Georgia, serif; */
     font-size: 16px;
     line-height: 1.2;
     color: #666;
     text-align: justify;
     
-    /*Borders - (Optional)*/
+    /*Borders - (Optional)
     border-left: 15px solid #c76c0c;
-    border-right: 2px solid #c76c0c;
+    border-right: 2px solid #c76c0c;*/
     
     /*Box Shadow - (Optional)*/
     -moz-box-shadow: 2px 2px 15px #ccc;
@@ -131,7 +139,7 @@ blockquote {
  ** FOOTER
  ***********************************/
 .main-footer {
-    background-color: lightgreen;
+    background: darkgreen;
     color: whitesmoke;
     text-align: center;   
     padding: 1rem auto 1rem;
