--- a/css/normalize.css
+++ b/css/normalize.css
@@ -81,7 +81,7 @@ button,
 input,
 select,
 textarea {
-    font-family: 'Roboto', 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif, 'Roboto';
 }
 
 /**
