--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,111 @@
-@media screen and (min-width: 480px) {
-  body {
-    background: navy;
+
+
+@media screen and (max-width: 200px) {
+  nav li:nth-child(2) {
+    display: none;
+  }
+  .responsive li:nth-child(2) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
+  header h1 {
+    font-size: 1rem;
   }
 }
-
-@media screen and (min-width: 660px) {
-  body {
-    background: darkgreen;
-  }  
+@media screen and (max-width: 260px) {
+  header h1 {
+    font-size: 2rem;
+  }
+	nav li:nth-child(2) {
+    display: none;
+  }
+  .responsive li:nth-child(2) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
+}
+/* iPhone 5 : 320px */
+@media screen and (max-width: 330px) {
+  header h1 {
+    font-size: 3rem;
+  }
+	nav li:nth-child(3) {
+    display: none;
+  }
+  .responsive li:nth-child(3) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
+}
+@media screen and (max-width: 420px) {
+  nav li:nth-child(4) {
+    display: none;
+  }
+  .responsive li:nth-child(4) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
+}
+@media screen and (max-width: 540px) {
+  nav li:nth-child(5) {
+    display: none;
+  }
+  .responsive li:nth-child(5) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
+}
+/* iPhone6 landscape 667px */
+@media screen and (max-width: 620px) {
+  nav li:nth-child(6) {
+    display: none;
+  }
+  .responsive li:nth-child(6) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
+}
+/* iPad */
+@media screen and (max-width: 767px) {
+  nav li:nth-child(7) {
+    display: none;
+  }
+  nav .icon {
+    display: block;
+  }
+  nav .icon:hover {
+    color: powderblue;
+  }
+  .responsive li:nth-child(7) {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
 }
