--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,6 +48,23 @@
     margin: 0 10px;
     padding: 0 0 10px 0;
   }
+.photo-id  {
+    width: 204px;
+    display: block;
+    margin: auto;
+}
+  .phone {
+    display: block;
+    text-align: center;
+  }
+  .phone .contact {
+    display: block-inline;
+    text-align: center;
+  }
+  .email {
+    display: block;
+    text-align: center;
+  }
 }
 @media screen and (max-width: 420px) {
   nav li:nth-child(4) {
@@ -80,12 +97,18 @@
   nav li:nth-child(6) {
     display: none;
   }
-/*  .dropdown-content li:nth-last-child(3n+3) {
-    display: none;
+  a.dropdown-item6 {
+    display: block;
+	  color: black;
   }
-  .dropdown-content li:nth-last-child(3n+4) {
-    display: none;
-  }  */ 
+  .responsive a.dropdown-item6 {
+    display: block;
+    text-align: center;
+    text-decoration: none; 
+    list-style: none;
+    margin: 0 10px;
+    padding: 0 0 10px 0;
+  }
 }
 /* iPad */
 @media screen and (max-width: 767px) {
@@ -100,13 +123,14 @@
   nav .icon:hover {
     color: powderblue;
   }
+  /*
   .dropdown-content li:nth-last-child(2n+2) {
     display: none;
   }
   .dropdown-content li:nth-last-child(2n+3) {
     display: none;
-  }  
-  .responsive {
+  } */
+  .responsive a.dropdown-item7 {
 	  display: block;
     text-align: center;
     text-decoration: none; 
@@ -115,21 +139,4 @@
     padding: 0 0 10px 0;
     margin: 0 10px;
   }  
-  /*
-  .dropdown-content {
-    display: block;
-    text-align: center;
-    text-decoration: none; 
-    list-style: none;
-    padding: 0 0 10px 0;
-    margin: 0 10px;
-  }  
-  .responsive {
-    display: block;
-    text-align: center;
-    text-decoration: none; 
-    list-style: none;
-    margin: 0 10px;
-    padding: 0 0 10px 0;
-  } */
 }
